--- a/config.json
+++ b/config.json
@@ -1,9 +1,16 @@
 {
 	"defaultConsole":"TEST",
+	"consoles":{
+		"TEST":"res/TEST.json",
+		"PSP":"res/PSP.json",
+		"PSX":"res/PSX.json",
+		"PS3":"res/PS3.json",
+		"NDS":"res/NDS.json"
+	},
 
 	"maxItems":8,
-
 	"styleLogos":true,
+	
 	"sitesLogos":{
 		"vimm.net":"media/vimm.png",
 		"archive.org":"media/archive.png"
@@ -11,9 +18,5 @@
 	"logoThemes":{
 		"media/vimm.png":"dark",
 		"media/archive.png":"light"
-	},
-
-	"consoles":{
-		"TEST":"res/TEST.json"
 	}
 }
