--- a/config.json
+++ b/config.json
@@ -1,22 +1,6 @@
 {
 	"defaultConsole":"TEST",
 	"consoles":{
-		"TEST":"res/TEST.json",
-		"PSP":"res/PSP.json",
-		"PSX":"res/PSX.json",
-		"PS3":"res/PS3.json",
-		"NDS":"res/NDS.json"
-	},
-
-	"maxItems":8,
-	"styleLogos":true,
-	
-	"sitesLogos":{
-		"vimm.net":"media/vimm.png",
-		"archive.org":"media/archive.png"
-	},
-	"logoThemes":{
-		"media/vimm.png":"dark",
-		"media/archive.png":"light"
+		"TEST":"res/TEST.json"
 	}
 }
